# cita_project

./: CMakeLists.txt  CMakeLists__temp.txt
data/basis_functions/: spiral_bfe_coefficients.csv  spiral_bfe_coefficients_15.csv  spiral_bfe_coefficients_30.csv  spiral_density.csv  spiral_density_terms.csv  spiral_trunc_density.csv  spiral_trunc_force.csv  spiral_trunc_potential.csv
data/basis_functions/basis_functions/: spiral_density.csv  spiral_trunc_force.csv  spiral_trunc_potential.csv
data/n_body/: test_bfe_coefficient_norms.csv
include/actions/: coords_theta_r.hpp  j_f_s_table.cpp  jres_finder.hpp  libration_calculator.hpp  theta_r_integrand.hpp  theta_r_integrator.hpp
include/basis_functions/: bfe.hpp  potential_from_density.hpp
include/consts/: units.hpp  units1.hpp
include/df/: dehnen_df.hpp  sample.hpp  tapered_df.hpp
include/multithreading/: execute_in_parallel.hpp
include/n_body/: bfe_nbody.hpp
include/potential/: axsym_funcs.hpp  mestel.hpp  mestel_spiral.hpp  potential_funcs.hpp  spiral.hpp
include/rc/: HEALPix.hpp  NewtonRaphson.hpp  bar.hpp  coordinate.hpp  export.hpp  force.hpp  galaxy.hpp  getJres.hpp  import.hpp  interpolate.hpp  mapXVtoAA2D.hpp  math_RC.hpp  pi.hpp  potential.hpp  potential_AGAMA.hpp  potential_CartGrid.hpp  potential_Hernquist.hpp  potential_multipole.hpp  potential_powerLawVc.hpp  sht.hpp  spiral.hpp  units.hpp  utils.hpp  vector_WD.hpp
include/special_functions/: bfe_pochhammer.hpp  gamma.hpp
include/tp_integration/: integrate_rk4.hpp  integrate_rk4_1d.hpp
include/utility/: add_arrays.hpp  add_functions.hpp  comp_funcs.hpp  debug_print.hpp  flatten.hpp  nd_vectors.hpp  shape.hpp  simple_timer.hpp  vector_io.hpp
include/vectors/: coords.hpp  force.hpp
main/: bfe_evaluation.cpp  double_read_timer  double_read_timer.cpp  free1.cpp  libration_amplitude.cpp  n_body_trial.cpp  resonance_evolution.cpp  scharzchild.cpp  schwarzchild.cpp  test_particle.cpp  test_particle_1.cpp  tp_dehnen_df.cpp
plotting/: bf_cache.py  coefficient_diagnosis.ipynb  debug_exp_action.py  exp_action.py  join_cache.py  n_body_trial.py  resonance_evolution.py  schwarzchild_evolution.py  split_cache.py  test_particle.py
py_src/: disc_plotter.py
src/actions/: jres_finder.cpp  jres_finder.test.cpp  libration_calculator.cpp  libration_calculator.test.cpp  theta_r_integrand.cpp  theta_r_integrand.test.cpp  theta_r_integrator.cpp  theta_r_integrator.test.cpp
src/basis_functions/: bfe.cpp  bfe.test.cpp  potential_from_density.cpp
src/df/: dehnen_df.cpp  dehnen_df.test.cpp  sample.cpp  sample.test.cpp  tapered_df.cpp  tapered_df.test.cpp
src/multithreading/: execute_in_parallel.cpp  execute_in_parallel.test.cpp
src/n_body/: bfe_nbody.cpp
src/potential/: axsym_funcs.cpp  mestel.cpp  mestel_spiral.cpp  mestel_spiral.test.cpp  potential_funcs.cpp  potential_funcs.test.cpp  spiral.cpp  spiral.test.cpp
src/rc/: HEALPix.cpp  bar.cpp  export.cpp  force.cpp  getJres.cpp  import.cpp  interpolate.cpp  mapXVtoAA2D.cpp  math_RC.cpp  potential.cpp  potential_AGAMA.cpp  potential_CartGrid.cpp  potential_Hernquist.cpp  potential_multipole.cpp  potential_powerLawVc.cpp  sht.cpp  spiral.cpp  utils.cpp
src/special_functions/: bfe_pochhammer.cpp  bfe_pochhammer.test.cpp  gamma.cpp  gamma.test.cpp
src/tp_integration/: integrate_rk4.cpp  integrate_rk4.test.cpp
src/utility/: add_functions.cpp  add_functions.test.cpp  debug_print.cpp  flatten.test.cpp  nd_vectors.test.cpp  shape.test.cpp  simple_timer.cpp  simple_timer.test.cpp  vector_io.cpp  vector_io.test.cpp
src/vectors/: coords.cpp  coords.test.cpp  force.cpp  force.test.cpp  force1.cpp  force1.test.cpp
test_data/actions/: theta_r_coords.csv  theta_r_s_t_q_integrand.csv
test_data/df/: get_df_sample_e_l.csv  tapered_df.csv  tapered_df_sample.csv
test_data/utility/: both_1d_work.csv
test_plotting/actions/: jres_finder.py  libration_calculator.py  theta_r_samples.py
test_plotting/basis_functions/: bfe.py  mestel_bfe.py  spiral_bfe.py
test_plotting/df/: dehnen_df.py  tapered_df.py  tapered_df_samples.py
test_plotting/potential/: spiral_test.py
